--- a/app/src/main/res/layout/facturacion.xml
+++ b/app/src/main/res/layout/facturacion.xml
@@ -16,6 +16,22 @@
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="10dp">
 
+            <android.support.design.widget.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+                <!-- Toolbar -->
+                <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimary"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+            </android.support.design.widget.AppBarLayout>
+
             <TextView
                 android:id="@+id/textView14"
                 android:layout_width="match_parent"
@@ -38,6 +54,14 @@
                 android:text="Nombre"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/reciclador"
+                android:layout_width="match_parent"
+                android:layout_height="77dp"
+                android:padding="3dp"
+                android:scrollbars="vertical"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
             <TextView
                 android:id="@+id/textView16"
                 android:layout_width="match_parent"
@@ -48,6 +72,28 @@
                 android:text="Fecha"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@android:color/black" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/size_fab"
+                android:layout_margin="@dimen/fab_margin"
+                android:onClick="onClickFab"
+                android:src="@drawable/ic_add"
+                app:borderWidth="0dp"
+                app:elevation="@dimen/fab_elevation"
+                app:layout_anchor="@id/coordinator"
+                app:layout_anchorGravity="bottom|right" />
+
+
+
+            <!-- Recycler -->
+
+            <!-- App Bar -->
+
+            <!-- FAB -->
+
+
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
